--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,16 +18,16 @@
 		36000, 36001, 36002, 36003, 36004
 	],
 
-	"portsAttributes": {
-		"18000-18004": {
-			"label": "D-Wave Problem Inspector",
-			"requireLocalPort": true
-		},
-		"36000-36004": {
-			"label": "OAuth 2.0 authorization code redirect URI",
-			"requireLocalPort": true
-		}
-	},
+	//"portsAttributes": {
+	//	"18000-18004": {
+	//		"label": "D-Wave Problem Inspector",
+	//		"requireLocalPort": true
+	//	},
+	//	"36000-36004": {
+	//		"label": "OAuth 2.0 authorization code redirect URI",
+	//		"requireLocalPort": true
+	//	}
+	//},
 
 	// Configure tool-specific properties.
 	"customizations": {
