Remove extensions to see if it still hangs.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,20 +32,20 @@
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
-		"vscode": {
-			// Set *default* container specific settings.json values on container create.
-			"settings": {
-				"workbench": {
-					"editorAssociations": {
-						"*.md": "vscode.markdown.preview.editor"
-					},
-					"startupEditor": "readme"
-				}
-			},
-			"extensions": [
-				"ms-python.python",
-				"ms-toolsai.jupyter"
-			]
-		}
+	//	"vscode": {
+	//		// Set *default* container specific settings.json values on container create.
+	//		"settings": {
+	//			"workbench": {
+	//				"editorAssociations": {
+	//					"*.md": "vscode.markdown.preview.editor"
+	//				},
+	//				"startupEditor": "readme"
+	//			}
+	//		},
+	//		"extensions": [
+	//			"ms-python.python",
+	//			"ms-toolsai.jupyter"
+	//		]
+	//	}
 	}
 }
