--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,15 +8,15 @@
 	"image": "docker.io/dwavesys/ocean-dev:latest",
 
 	// install repo requirements on create and content update
-	"updateContentCommand": "pip install -r requirements.txt",
+	"updateContentCommand": "pip install -r requirements.txt"
 
 	// forward/expose container services (relevant only when run locally)
-	"forwardPorts": [
+	//"forwardPorts": [
 		// dwave-inspector web app
-		18000, 18001, 18002, 18003, 18004,
+	//	18000, 18001, 18002, 18003, 18004,
 		// OAuth connect redirect URIs
-		36000, 36001, 36002, 36003, 36004
-	],
+	//	36000, 36001, 36002, 36003, 36004
+	//],
 
 	//"portsAttributes": {
 	//	"18000-18004": {
